# REDasmTech

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  QHexView  README.md
lib/: CMakeLists.txt  compile_commands.json
lib/.automaton/: launch.json
lib/cmake/: CPM_SQLite3.cmake  Compiler.cmake  Dependencies.cmake
lib/include/redasm/: analyzer.h  buffer.h  byte.h  byteorder.h  common.h  ct.h  engine.h  environment.h  function.h  graph.h  hash.h  instruction.h  listing.h  loader.h  memory.h  plugin.h  processor.h  program.h  rdil.h  redasm.h  renderer.h  segment.h  signature.h  sreg.h  stream.h  surface.h  theme.h  types.h  typing.h  ui.h  utils.h  version.h  worker.h
lib/include/redasm/types/: dict.h  map.h  str.h  strv.h  vect.h
lib/plugins/: CMakeLists.txt
lib/plugins/cmake/: Compiler.cmake  Dependencies.cmake
lib/plugins/src/loaders/android/: CMakeLists.txt  android.cpp  dalvik.cpp  dalvik.h  dalvik_types.cpp  dalvik_types.h  demangler.cpp  demangler.h  dex.cpp  dex.h  dex_constants.h
lib/plugins/src/loaders/android/libdex/: CMakeLists.txt
lib/plugins/src/loaders/android/libdex/src/libdex/: DexCatch.h  DexClass.cpp  DexClass.h  DexDataMap.cpp  DexDataMap.h  DexDebugInfo.cpp  DexDebugInfo.h  DexFile.cpp  DexFile.h  DexOpcodes.h  (+6 more)
lib/plugins/src/loaders/dos/: CMakeLists.txt  com.cpp  com.h  dos.cpp  dos.h  env.cpp  env.h  plugin.cpp
lib/plugins/src/loaders/elf/: CMakeLists.txt  elf.cpp  elf_common.h  elf_dwarf.cpp  elf_dwarf.h  elf_format.cpp  elf_format.h  elf_header.h  elf_sections.cpp  elf_sections.h  elf_state.cpp  elf_state.h  elf_types.cpp  elf_types.h
lib/plugins/src/loaders/psx/: CMakeLists.txt  psx.cpp  psxexe.cpp  psxexe.h
lib/plugins/src/loaders/psx/android/: CMakeLists.txt  rd_compat.h
lib/plugins/src/loaders/psx/android/libdex/: DexCatch.cpp  DexClass.h  DexFile.cpp  DexFile.h  DexOptData.cpp  DexProto.cpp  DexSwapVerify.cpp  DexUtf.cpp  DexUtf.h  InstrUtils.cpp  Leb128.cpp  sha1.cpp
lib/plugins/src/processors/capstonebundle/: CMakeLists.txt  capstone.cpp  capstone.h  plugin.cpp
lib/plugins/src/processors/capstonebundle/arm/: arm32.cpp  arm32.h  arm32_macros.cpp  arm32_macros.h
lib/plugins/src/processors/mips/: CMakeLists.txt  mips.cpp  mips_decoder.cpp  mips_decoder.h  mips_format.cpp  mips_format.h  mips_instruction.h  mips_macrodecoder.cpp  mips_macrodecoder.h  mips_registers.h
lib/plugins/src/processors/x86/: CMakeLists.txt  x86.cpp  x86.h  x86_cc.cpp  x86_cc.h  x86_common.cpp  x86_common.h  x86_lifter.cpp  x86_lifter.h
lib/plugins/src/python/: CMakeLists.txt  README.md
lib/plugins/src/python/src/: analyzer.cpp  analyzer.h  buffer.cpp  buffer.h  byteorder.cpp  byteorder.h  common.cpp  common.h  loader.cpp  loader.h  methods.h  plugin.cpp  plugin.h  rdil.cpp  rdil.h  redasm.cpp  redasm.h  stream.cpp  stream.h  typing.cpp  typing.h  utils.cpp  utils.h
lib/src/: context.cpp  context.h  error.h  listing.cpp  listing.h  modulemanager.cpp  modulemanager.h  segment.cpp  segment.h  state.cpp  state.h  theme.cpp  theme.h  types.h
lib/src/api/: analyzer.cpp  buffer.cpp  byte.cpp  byteorder.cpp  ct.c  cutl.c  environment.cpp  function.cpp  graph.cpp  hash.cpp  instruction.cpp  listing.cpp  loader.cpp  marshal.cpp  marshal.h  memory.cpp  plugin.cpp  processor.cpp  program.cpp  rdil.cpp  redasm.cpp  renderer.cpp  signature.cpp  sreg.cpp  stream.cpp  surface.cpp  theme.cpp  typing.cpp  ui.cpp  utils.cpp
lib/src/api/c/: analyzer.cpp  buffer.cpp  byte.cpp  byteorder.cpp  function.cpp  graph.cpp  hash.cpp  listing.cpp  loader.cpp  memory.cpp  plugin.cpp  processor.cpp  rdil.cpp  redasm.cpp  renderer.cpp  stream.cpp  surface.cpp  theme.cpp  typing.cpp  ui.cpp  utils.cpp
lib/src/api/internal/: analyzer.cpp  analyzer.h  buffer.cpp  buffer.h  byte.cpp  byte.h  byteorder.cpp  byteorder.h  file.cpp  file.h  function.cpp  function.h  graph.cpp  graph.h  hash.cpp  hash.h  listing.cpp  listing.h  loader.cpp  loader.h  memory.cpp  memory.h  processor.cpp  processor.h  rdil.cpp  rdil.h  redasm.cpp  redasm.h  renderer.cpp  renderer.h  stream.cpp  stream.h  surface.cpp  surface.h  theme.cpp  theme.h  typing.cpp  typing.h  ui.cpp  ui.h  (+2 more)
lib/src/api/python/: analyzer.cpp  analyzer.h  buffer.cpp  buffer.h  byteorder.cpp  byteorder.h  common.cpp  common.h  loader.cpp  loader.h  methods.h  module.cpp  module.h  plugin.h  rdil.cpp  rdil.h  redasm.cpp  redasm.h  stream.cpp  stream.h  typing.cpp  typing.h  utils.cpp  utils.h
lib/src/builtins/: analyzer.cpp  analyzer.h  loader.cpp  loader.h  processor.cpp  processor.h
lib/src/c/: dict.c  str.c  strv.c  vect.c
lib/src/database/: database.cpp  database.h
lib/src/disasm/: disassembler.cpp  disassembler.h  emulateresult.cpp  emulateresult.h  emulator.cpp  emulator.h  function.cpp  function.h  memprocess.cpp  memprocess.h  worker.cpp  worker.h
lib/src/graph/: datagraph.cpp  datagraph.h  graph.cpp  graph.h  styledgraph.cpp  styledgraph.h
lib/src/graph/layouts/: layeredlayout.cpp  layeredlayout.h
lib/src/internal/: buffer_internal.h  stream_internal.h
lib/src/memory/: abstractbuffer.cpp  abstractbuffer.h  abstractstream.cpp  abstractstream.h  buffer.cpp  buffer.h  byte.h  byteorder.h  file.cpp  file.h  mbyte.h  memory.cpp  memory.h  memorystream.cpp  memorystream.h  program.cpp  program.h  reader.h  stream.cpp  stream.h  stringfinder.cpp  stringfinder.h
lib/src/plugins/: modulemanager.cpp  modulemanager.h  origin.h  pluginmanager.cpp  pluginmanager.h
lib/src/rdil/: expression.cpp  expression.h  expressionlist.cpp  expressionlist.h  function.cpp  function.h  rdil.cpp  rdil.h
lib/src/signature/: pattern.cpp  pattern.h  signature.cpp  signature.h
lib/src/surface/: renderer.cpp  renderer.h  surface.cpp  surface.h
lib/src/typing/: base.h  basetypes.cpp  basetypes.h  parser.cpp  parser.h  primitive.h  typedef.h  typing.cpp  typing.h  value.h
lib/src/utils/: hash.cpp  hash.h  leb128.cpp  leb128.h  msgpack.h  object.h  pattern.cpp  pattern.h  utils.cpp  utils.h
lib/src/utils/process/: process.cpp  process.h  process_unix.cpp  process_unix.h
lib/tests/: CMakeLists.txt  main.cpp
(+160 files in other folders)
